--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=Правилото се прилага към т
 a-rule-is-applied-to-this-field-by-changing-its-type=Правилото се прилага към това поле. Чрез промяна на вида, тя ще засегне и правилото, което го използва. (Automatic Translation)
 a-single-line=A Single Line
 a-site-pages-variation-with-that-name-already-exists=A Site Pages Variation with that name already exists.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Поетапната библиотека с активи не може да бъде свързана към неподаран сайт. (Automatic Translation)
 a-style-book-with-the-key-x-already-exists=A style book with the key {0} already exists. (Automatic Copy)
 a-subset-of-groups-has-been-displayed-for-you-to-review=Представен ви е поднабор от групи за преглед
@@ -1476,6 +1477,7 @@ analytics-upload-product=Качване на продукти в облака н
 analyzer=Анализатор (Automatic Translation)
 analyzer-help=Задайте анализатора, който да се използва в полетата на входния документ. Ако остане празно, това по подразбиране се извършва от анализатора, свързан с първия запис в конфигурацията на полетата. (Automatic Translation)
 and=И
+and-contains=AND contains (Automatic Copy)
 and-operator=и оператор (Automatic Translation)
 and-or-operator=и/или оператор (Automatic Translation)
 and-then-by=и след това (Automatic Translation)
@@ -1509,6 +1511,7 @@ any=Всеки
 any-account=Any Account (Automatic Copy)
 any-asset=Всеки актив (Automatic Translation)
 any-category=Всяка категория (Automatic Translation)
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Any changes made in production will immediately be live. Continue to production? (Automatic Copy)
 any-day=Който и да е ден
 any-events-edited-previously-will-not-be-affected-by-this-modification=Всички събития, които са редактирани преди това, няма да бъдат засегнати от тази промяна. (Automatic Translation)
