--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=Der anvendes en regel på dette felt. Ved at sle
 a-rule-is-applied-to-this-field-by-changing-its-type=Der anvendes en regel på dette felt. Ved at ændre dens type påvirker det også den regel, der bruger den. (Automatic Translation)
 a-single-line=A Single Line
 a-site-pages-variation-with-that-name-already-exists=A webstedssidevariation med dette navn eksisterer allerede.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Et faseinddelt aktivbibliotek kan ikke oprettes forbindelse til et ikke-gemt websted. (Automatic Translation)
 a-style-book-with-the-key-x-already-exists=A style book with the key {0} already exists. (Automatic Copy)
 a-subset-of-groups-has-been-displayed-for-you-to-review=Der er vist et undersæt af grupper, som du kan gennemse. (Automatic Translation)
@@ -1476,6 +1477,7 @@ analytics-upload-product=Upload af Analytics Cloud Commerce-produkter (Automatic
 analyzer=Analyzer (Automatic Translation)
 analyzer-help=Angiv den analysator, der skal bruges i inputdokumentets felter. Hvis feltet ikke udfyldes, angives dette som standard til den analysator, der er tilknyttet den første post i feltkonfigurationen. (Automatic Translation)
 and=And (Automatic Copy)
+and-contains=AND contains (Automatic Copy)
 and-operator=Og operatør (Automatic Translation)
 and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=And Then By (Automatic Copy)
@@ -1509,6 +1511,7 @@ any=Any (Automatic Copy)
 any-account=Any Account (Automatic Copy)
 any-asset=Ethvert aktiv (Automatic Translation)
 any-category=Enhver kategori (Automatic Translation)
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Any changes made in production will immediately be live. Continue to production? (Automatic Copy)
 any-day=Any Day (Automatic Copy)
 any-events-edited-previously-will-not-be-affected-by-this-modification=Hændelser, der er redigeret tidligere, påvirkes ikke af denne ændring. (Automatic Translation)
