--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=Für dieses Feld wird eine Regel angewendet. Wen
 a-rule-is-applied-to-this-field-by-changing-its-type=Für dieses Feld wird eine Regel angewendet. Wenn sein Typ geändert wird, wird auch die Regel entfernt, die es verwendet.
 a-single-line=Eine einzelne Zeile
 a-site-pages-variation-with-that-name-already-exists=Eine sitespezifische Seitenvariation mit diesem Namen existiert bereits.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Ein bereitgestelltes Repository kann nicht mit einer nicht bereitgestellten Site verbunden werden.
 a-style-book-with-the-key-x-already-exists=Ein Style Book-Eintrag mit dem Schlüssel {0} existiert bereits.
 a-subset-of-groups-has-been-displayed-for-you-to-review=Bitte prüfen Sie den nachfolgenden Auszug aus den vorgefundenen Gruppen auf Richtigkeit.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Hochladen von Analytics-Cloud-Handelsprodukten
 analyzer=Analysewerkzeug
 analyzer-help=Das Analysewerkzeug, mit dem der Freiformtext analysiert wird. Standard ist das Analysewerkzeug, das bei den Feldern mit dem ersten Feld verknüpft ist.
 and=und
+and-contains=AND contains (Automatic Copy)
 and-operator=Und-Operator
 and-or-operator=Und-/Oder-Operator
 and-then-by=und dann nach
@@ -1509,6 +1511,7 @@ any=Beliebige(r)
 any-account=Alle Konten
 any-asset=Beliebige Assets
 any-category=Beliebige Kategorien
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Alle in der Produktion vorgenommenen Änderungen werden sofort live geschaltet. Weiter zur Produktion?
 any-day=Beliebiger Tag
 any-events-edited-previously-will-not-be-affected-by-this-modification=Alle zuvor bearbeiteten Termine sind von dieser Änderung nicht betroffen.
