--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=Tähän kenttään käytetään sääntöä. Poi
 a-rule-is-applied-to-this-field-by-changing-its-type=Tähän kenttään käytetään sääntöä. Vaihtamalla sen tyyppiä rikot säännön, joka käyttää sitä.
 a-single-line=Yksi rivi
 a-site-pages-variation-with-that-name-already-exists=Sivustomuunnelman nimi on jo olemassa.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Vaiheistettua resurssikirjastoa ei voi yhdistää vaiheistamattomaan sivustoon.
 a-style-book-with-the-key-x-already-exists=Tyylikirja avaimella {0} on jo olemassa.
 a-subset-of-groups-has-been-displayed-for-you-to-review=Ryhmien osajoukko esitetään vahvistettavaksi.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Analytics-pilven Kaupankäynti Tuotteiden Lataus palvel
 analyzer=Analysoija
 analyzer-help=Analysoija, jota käytetään analysoimaan vapaamuotoista tekstiä. Oletusarvo on analysoija, joka liittyy kenttien ensimmäiseen kenttään.
 and=ja
+and-contains=AND contains (Automatic Copy)
 and-operator=ja operaattori
 and-or-operator=ja/tai operaattori
 and-then-by=ja sitten jollekin
@@ -1509,6 +1511,7 @@ any=Mikä tahansa
 any-account=Mikä tahansa tili
 any-asset=Mikä tahansa sisältö
 any-category=Mikä tahansa sisältö
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Kaikki tuotannossa tehdyt muutokset tulevat näkyviin välittömästi. Jatketaanko tuotantoon?
 any-day=Mikä tahansa päivä
 any-events-edited-previously-will-not-be-affected-by-this-modification=Tämä muutos ei vaikuta mihinkään aiemmin muokattuun tapahtumaan.
