--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=Erre a mezőre egy szabály vonatkozik. Ha törl
 a-rule-is-applied-to-this-field-by-changing-its-type=Erre a mezőre szabály vonatkozik. Ha megváltoztatja a típusát, az azt használó szabályra is hatással lesz.
 a-single-line=Egyetlen vonal
 a-site-pages-variation-with-that-name-already-exists=Ilyen nevű webhely-oldalváltozat már van.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Egy átmeneti adattár nem kapcsolható egy nem átmeneti webhelyhez.
 a-style-book-with-the-key-x-already-exists=Egy {0} kulcsú stíluskönyv már létezik.
 a-subset-of-groups-has-been-displayed-for-you-to-review=Csoportok egy részhalmaza áttekintésre megjelenítve.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Analytics felhő – kereskedelmi termékek feltöltés
 analyzer=Elemző
 analyzer-help=A kötetlen szöveg elemzéséhez használt elemző. A mezők közül az elsőhöz kapcsolódó elemző az alapértelmezett.
 and=és
+and-contains=AND contains (Automatic Copy)
 and-operator=És műveleti jel
 and-or-operator=És/Vagy műveleti jel
 and-then-by=és aztán
@@ -1509,6 +1511,7 @@ any=bármelyik
 any-account=Tetszőleges fiók
 any-asset=Bármely tartalom
 any-category=Bármely kategória
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Az éles verzióban végzett változtatások azonnal életbe lépnek. Folytatja az éles verzióban?
 any-day=Bármelyik nap
 any-events-edited-previously-will-not-be-affected-by-this-modification=Ez a módosítás nem érinti a korábban szerkesztett eseményeket.
