--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=Aturan diterapkan ke bidang ini. Dengan menghapu
 a-rule-is-applied-to-this-field-by-changing-its-type=Aturan diterapkan ke bidang ini. Dengan mengubah jenisnya, itu juga akan mempengaruhi aturan yang menggunakannya. (Automatic Translation)
 a-single-line=A Single Line
 a-site-pages-variation-with-that-name-already-exists=Sebuah situs Halaman Variasi dengan nama yang sudah ada.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Pustaka aset tersentaskan tidak dapat disambungkan ke situs yang tidak tertageksi. (Automatic Translation)
 a-style-book-with-the-key-x-already-exists=A style book with the key {0} already exists. (Automatic Copy)
 a-subset-of-groups-has-been-displayed-for-you-to-review=Sebuah subset dari Grup telah ditampilkan bagi Anda untuk diperiksa.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Unggahan Produk Cloud Commerce Analytics (Automatic Tra
 analyzer=Analyzer (Automatic Translation)
 analyzer-help=Tentukan penganalisa yang akan digunakan pada bidang dokumen input. Jika dibiarkan kosong, default ini ke penganalisa yang terkait dengan entri pertama dalam konfigurasi bidang. (Automatic Translation)
 and=Dan
+and-contains=AND contains (Automatic Copy)
 and-operator=dan Operator (Automatic Translation)
 and-or-operator=dan/atau operator (Automatic Translation)
 and-then-by=Dan Kemudian Dengan
@@ -1509,6 +1511,7 @@ any=Apa pun
 any-account=Any Account (Automatic Copy)
 any-asset=Aset Apa Pun (Automatic Translation)
 any-category=Kategori Apa Pun (Automatic Translation)
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Any changes made in production will immediately be live. Continue to production? (Automatic Copy)
 any-day=Setiap Hari
 any-events-edited-previously-will-not-be-affected-by-this-modification=Setiap peristiwa yang diedit sebelumnya tidak akan terpengaruh oleh modifikasi ini. (Automatic Translation)
