--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=כלל מוחל על שדה זה. על-ידי מ
 a-rule-is-applied-to-this-field-by-changing-its-type=כלל מוחל על שדה זה. על-ידי שינוי הסוג שלו, הוא ישפיע גם על הכלל המשתמש בו. (Automatic Translation)
 a-single-line=שורה בודדת
 a-site-pages-variation-with-that-name-already-exists=קיימת כבר וריאציה לדפי אתר בשם זה.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=אין אפשרות לחבר ספריית נכסים מבוימת לאתר לא מבוים. (Automatic Translation)
 a-style-book-with-the-key-x-already-exists=A style book with the key {0} already exists. (Automatic Copy)
 a-subset-of-groups-has-been-displayed-for-you-to-review=תת-קבוצה של קבוצות הוצגה לבחינתך.
@@ -1476,6 +1477,7 @@ analytics-upload-product=העלאת מוצרי מסחר בענן של Analytics 
 analyzer=מנתח (Automatic Translation)
 analyzer-help=ציין את המנתח לשימוש בשדות מסמך הקלט. אם אפשרות זו נשארת ריקה, ברירת המחדל היא למנתח המשויך לערך הראשון בתצורת השדות. (Automatic Translation)
 and=וגם
+and-contains=AND contains (Automatic Copy)
 and-operator=ואופרטור
 and-or-operator=אופרטור ו/או
 and-then-by=ולאחר מכן על פי
@@ -1509,6 +1511,7 @@ any=איזשהו
 any-account=Any Account (Automatic Copy)
 any-asset=כל נכס
 any-category=כל קטגוריה
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Any changes made in production will immediately be live. Continue to production? (Automatic Copy)
 any-day=יום כלשהו
 any-events-edited-previously-will-not-be-affected-by-this-modification=כל אירוע שנערך קודם לכן לא יושפעו משינוי זה.
