--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=ルールがこのフィールドに適用され
 a-rule-is-applied-to-this-field-by-changing-its-type=ルールがこのフィールドに適用されています。そのタイプを変更すると、それを使用しているルールにも影響します。
 a-single-line=一行
 a-site-pages-variation-with-that-name-already-exists=同名のサイトページバリエーションが存在します。
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=ステージング中のアセットライブラリをステージングしていないサイトに接続することはできません。
 a-style-book-with-the-key-x-already-exists=キーが {0} のスタイルブックがすでに存在します。
 a-subset-of-groups-has-been-displayed-for-you-to-review=グループのサブセットが、レビュー用に表示されています。
@@ -1476,6 +1477,7 @@ analytics-upload-product=Analytics Cloudコマース製品のアップロード
 analyzer=アナライザー
 analyzer-help=自由形式テキストの分析に使用するアナライザーです。デフォルトはフィールド内の最初のフィールドに関連付けられたアナライザーです。
 and=および
+and-contains=AND contains (Automatic Copy)
 and-operator=AND記号
 and-or-operator=AND/OR演算子
 and-then-by=第２ソート順
@@ -1509,6 +1511,7 @@ any=任意
 any-account=任意のアカウント
 any-asset=すべてのアセット
 any-category=すべてのカテゴリー
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=本番環境で行った変更は即座に反映されます。本番環境に続行しますか？
 any-day=指定日なし
 any-events-edited-previously-will-not-be-affected-by-this-modification=これまでに変更されたイベントはこの変更の影響を受けません。
