--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=Peraturan digunakan pada medan ini. Dengan memad
 a-rule-is-applied-to-this-field-by-changing-its-type=Peraturan digunakan pada medan ini. Dengan menukar jenisnya, ia juga akan menjejaskan peraturan yang menggunakannya. (Automatic Translation)
 a-single-line=Satu Talian (Automatic Translation)
 a-site-pages-variation-with-that-name-already-exists=Halaman tapak berbeza dengan nama itu sudah wujud. (Automatic Translation)
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Perpustakaan aset berperingkat tidak boleh disambungkan ke tapak yang tidak terganggu. (Automatic Translation)
 a-style-book-with-the-key-x-already-exists=A style book with the key {0} already exists. (Automatic Copy)
 a-subset-of-groups-has-been-displayed-for-you-to-review=Subset kumpulan telah dipaparkan untuk anda semak. (Automatic Translation)
@@ -1476,6 +1477,7 @@ analytics-upload-product=Analisis Muat Naik Produk Perdagangan Awan (Automatic T
 analyzer=Penganalisi (Automatic Translation)
 analyzer-help=Tentukan penganalisis untuk digunakan pada medan dokumen input. Jika dibiarkan kosong, ini lalai kepada penganalisi yang dikaitkan dengan entri pertama dalam konfigurasi medan. (Automatic Translation)
 and=Dan (Automatic Translation)
+and-contains=AND contains (Automatic Copy)
 and-operator=Dan Operator (Automatic Translation)
 and-or-operator=Dan/Atau Operator (Automatic Translation)
 and-then-by=Dan Kemudian Oleh (Automatic Translation)
@@ -1509,6 +1511,7 @@ any=Sebarang (Automatic Translation)
 any-account=Any Account (Automatic Copy)
 any-asset=Sebarang Aset (Automatic Translation)
 any-category=Mana-mana Kategori (Automatic Translation)
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Any changes made in production will immediately be live. Continue to production? (Automatic Copy)
 any-day=Mana-mana Hari (Automatic Translation)
 any-events-edited-previously-will-not-be-affected-by-this-modification=Sebarang peristiwa yang disunting sebelum ini tidak akan terjejas oleh pengubahsuaian ini. (Automatic Translation)
