--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=En regel brukes på dette feltet. Hvis du slette
 a-rule-is-applied-to-this-field-by-changing-its-type=En regel brukes på dette feltet. Ved å endre typen, vil det også påvirke regelen som bruker den. (Automatic Translation)
 a-single-line=En enkelt linje
 a-site-pages-variation-with-that-name-already-exists=En sidevariant med dette navnet finnes allerede.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Et trinnvis ressursbibliotek kan ikke kobles til et område uten scene. (Automatic Translation)
 a-style-book-with-the-key-x-already-exists=A style book with the key {0} already exists. (Automatic Copy)
 a-subset-of-groups-has-been-displayed-for-you-to-review=Et utvalg av grupper vises for gjennomsyn.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Opplasting av Analytics Cloud Commerce-produkter (Autom
 analyzer=Analyzer (Automatic Translation)
 analyzer-help=Angi analysatoren som skal brukes i feltene i inndatadokumentet. Hvis du lar feltet stå tomt, brukes analysatoren som er knyttet til den første oppføringen i feltkonfigurasjonen, som standard. (Automatic Translation)
 and=Og
+and-contains=AND contains (Automatic Copy)
 and-operator=Og-opertør
 and-or-operator=Og/Eller-operatør
 and-then-by=Og så ved
@@ -1509,6 +1511,7 @@ any=Noen
 any-account=Any Account (Automatic Copy)
 any-asset=Ethvert aktiva (Automatic Translation)
 any-category=Hvilken som helst kategori (Automatic Translation)
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Any changes made in production will immediately be live. Continue to production? (Automatic Copy)
 any-day=Valgfri dag
 any-events-edited-previously-will-not-be-affected-by-this-modification=Hendelser tidligere redigert vil ikke påvirkes av denne endringen.
