--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=Reguła jest stosowana do tego pola. Usuwając g
 a-rule-is-applied-to-this-field-by-changing-its-type=Reguła jest stosowana do tego pola. Zmieniając jego typ, wpłynie to również na regułę, która go używa. (Automatic Translation)
 a-single-line=A Single Line
 a-site-pages-variation-with-that-name-already-exists=Wariant stron witryny o tej nazwie już istnieje.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Nie można połączyć biblioteki zasobów etapowych z witryną nierozstrzygniętą. (Automatic Translation)
 a-style-book-with-the-key-x-already-exists=A style book with the key {0} already exists. (Automatic Copy)
 a-subset-of-groups-has-been-displayed-for-you-to-review=Został Ci wyświetlony do przeglądu podzbiór grup.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Przesyłanie produktów chmury firmy Analytics (Automat
 analyzer=Analizator (Automatic Translation)
 analyzer-help=Określ analizator do użycia w polach dokumentu wejściowego. Jeśli pozostanie puste, to domyślnie do analizatora skojarzonego z pierwszym wpisem w konfiguracji pól. (Automatic Translation)
 and=I
+and-contains=AND contains (Automatic Copy)
 and-operator=Operator koniunkcji (AND)
 and-or-operator=Operator i/lub
 and-then-by=Następnie po
@@ -1509,6 +1511,7 @@ any=Dowolny
 any-account=Any Account (Automatic Copy)
 any-asset=Dowolny zasób (Automatic Translation)
 any-category=Dowolna kategoria (Automatic Translation)
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Any changes made in production will immediately be live. Continue to production? (Automatic Copy)
 any-day=Dowolny dzień
 any-events-edited-previously-will-not-be-affected-by-this-modification=Ta modyfikacja nie będzie miała wpływu na wszystkie zdarzenia edytowane wcześniej. (Automatic Translation)
