--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=Se aplică o regulă acestui câmp. Ștergându-
 a-rule-is-applied-to-this-field-by-changing-its-type=Se aplică o regulă acestui câmp. Prin schimbarea tipului său, va afecta, de asemenea, regula care îl utilizează. (Automatic Translation)
 a-single-line=A Single Line
 a-site-pages-variation-with-that-name-already-exists=A Site Pages Variation with that name already exists.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=O bibliotecă de active etapizată nu poate fi conectată la un site neetichetat. (Automatic Translation)
 a-style-book-with-the-key-x-already-exists=A style book with the key {0} already exists. (Automatic Copy)
 a-subset-of-groups-has-been-displayed-for-you-to-review=Un subset de grupuri a fost afișat pentru ca tu să îl revizuiești.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Încărcarea produselor de comerț în cloud Analytics 
 analyzer=Analyzer (Automatic Translation)
 analyzer-help=Specificați analizorul de utilizat în câmpurile documentului de intrare. Dacă este lăsat necompletat, acest lucru este implicit pentru analizorul asociat cu prima intrare în configurația câmpurilor. (Automatic Translation)
 and=Și
+and-contains=AND contains (Automatic Copy)
 and-operator=Și operator (Automatic Translation)
 and-or-operator=și/sau operator (Automatic Translation)
 and-then-by=Și după de
@@ -1509,6 +1511,7 @@ any=Orice
 any-account=Any Account (Automatic Copy)
 any-asset=Orice activ (Automatic Translation)
 any-category=Orice categorie (Automatic Translation)
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Any changes made in production will immediately be live. Continue to production? (Automatic Copy)
 any-day=Orice ZI
 any-events-edited-previously-will-not-be-affected-by-this-modification=Orice evenimente editate anterior nu vor fi afectate de această modificare. (Automatic Translation)
