--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=Na toto pole sa použije pravidlo. Jeho odstrán
 a-rule-is-applied-to-this-field-by-changing-its-type=Na toto pole sa použije pravidlo. Zmenou typu ovplyvní aj pravidlo, ktoré ho používa. (Automatic Translation)
 a-single-line=A Single Line
 a-site-pages-variation-with-that-name-already-exists=Variant stránok sídla s takýmto menom už existuje.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Inscenovaná knižnica majetku nemôže byť pripojená k neinscenovanému lokalite. (Automatic Translation)
 a-style-book-with-the-key-x-already-exists=A style book with the key {0} already exists. (Automatic Copy)
 a-subset-of-groups-has-been-displayed-for-you-to-review=Zobrazila sa vám podmnožina skupín na posúdenie.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Nahrávanie produktov Služby Analytics Cloud Commerce 
 analyzer=analyzátor (Automatic Translation)
 analyzer-help=Zadajte analyzátor, ktorý sa má použiť v poliach vstupného dokumentu. Ak ponecháte pole prázdne, toto nastavenie sa predvolene na analyzátor priradené k prvej položke v konfigurácii polí. (Automatic Translation)
 and=A
+and-contains=AND contains (Automatic Copy)
 and-operator=Operátor AND
 and-or-operator=Operátor a/alebo
 and-then-by=A potom podľa
@@ -1509,6 +1511,7 @@ any=Akékoľvek
 any-account=Any Account (Automatic Copy)
 any-asset=Ľubovoľný príspevok
 any-category=Ľubovoľná kategória
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Any changes made in production will immediately be live. Continue to production? (Automatic Copy)
 any-day=Akýkoľvek deň
 any-events-edited-previously-will-not-be-affected-by-this-modification=Táto úprava neovplyvní žiadne udalosti, ktoré boli predtým upravené. (Automatic Translation)
