--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=Bu alana bir kural uygulanır. Silerek, onu kull
 a-rule-is-applied-to-this-field-by-changing-its-type=Bu alana bir kural uygulanır. Türünü değiştirerek, onu kullanan kuralı da etkiler. (Automatic Translation)
 a-single-line=A Single Line
 a-site-pages-variation-with-that-name-already-exists=A Site Pages Variation with that name already exists.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Aşamalı varlık kitaplığı, sahnelenmemiş bir siteye bağlanamaz. (Automatic Translation)
 a-style-book-with-the-key-x-already-exists=A style book with the key {0} already exists. (Automatic Copy)
 a-subset-of-groups-has-been-displayed-for-you-to-review=Bir grubun alt kümesi sizin gözden geçirmeniz için görüntülendi.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Analytics Bulut Ticaret Ürünleri Yükleme (Automatic 
 analyzer=Analyzer (Automatic Translation)
 analyzer-help=Giriş belgesinin alanlarında kullanılacak çözümleyiciyi belirtin. Boş bırakılırsa, bu varsayılan olarak alan yapılandırmasındaki ilk girişle ilişkili çözümleyiciyi gösterir. (Automatic Translation)
 and=Ve
+and-contains=AND contains (Automatic Copy)
 and-operator=Ve İşleç (Automatic Translation)
 and-or-operator=Ve/veya İşleç (Automatic Translation)
 and-then-by=Ve sonra tarafından (Automatic Translation)
@@ -1509,6 +1511,7 @@ any=Herhangi biri
 any-account=Any Account (Automatic Copy)
 any-asset=Herhangi Bir Varlık (Automatic Translation)
 any-category=Herhangi Bir Kategori (Automatic Translation)
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Any changes made in production will immediately be live. Continue to production? (Automatic Copy)
 any-day=Herhangi Bir Gün
 any-events-edited-previously-will-not-be-affected-by-this-modification=Daha önce düzenlenen olaylar bu değişiklikte etkilenmez. (Automatic Translation)
