--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=Một quy tắc được áp dụng cho trườn
 a-rule-is-applied-to-this-field-by-changing-its-type=Một quy tắc được áp dụng cho trường này. Bằng cách thay đổi loại của nó, nó cũng sẽ ảnh hưởng đến quy tắc đang sử dụng nó. (Automatic Translation)
 a-single-line=A Single Line
 a-site-pages-variation-with-that-name-already-exists=Một trang tin tức biến thể với tên này đã tồn tại.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Thư viện tài nguyên theo giai đoạn không thể kết nối với trang web chưa được gắn thẻ. (Automatic Translation)
 a-style-book-with-the-key-x-already-exists=A style book with the key {0} already exists. (Automatic Copy)
 a-subset-of-groups-has-been-displayed-for-you-to-review=Một tập nhỏ của nhóm đã được xuất hiện để bạn kiểm tra.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Tải lên sản phẩm thương mại đám mây Analy
 analyzer=Analyzer (Automatic Translation)
 analyzer-help=Chỉ định trình phân tích để sử dụng trên các trường của tài liệu đầu vào. Nếu để trống, điều này mặc định với trình phân tích được liên kết với mục đầu tiên trong cấu hình trường. (Automatic Translation)
 and=và
+and-contains=AND contains (Automatic Copy)
 and-operator=Toán hạng Và (And)
 and-or-operator=Toán hạng Và/Hoặc (And/Or)
 and-then-by=Tiếp theo bởi
@@ -1509,6 +1511,7 @@ any=Bất kỳ
 any-account=Any Account (Automatic Copy)
 any-asset=Bất kỳ tài sản nào (Automatic Translation)
 any-category=Bất kỳ thể loại nào (Automatic Translation)
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Any changes made in production will immediately be live. Continue to production? (Automatic Copy)
 any-day=Bất kỳ ngày nào
 any-events-edited-previously-will-not-be-affected-by-this-modification=Bất kỳ sự kiện nào được chỉnh sửa trước đó sẽ không bị ảnh hưởng bởi sửa đổi này. (Automatic Translation)
