--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=规则已应用于此字段。删除规则，也
 a-rule-is-applied-to-this-field-by-changing-its-type=规则已应用于此字段。更改其类型，也会影响使用该规则的规则。
 a-single-line=单行
 a-site-pages-variation-with-that-name-already-exists=已经存在一个同名站点页面变体。
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=暂存资产库无法连接到非暂存站点。
 a-style-book-with-the-key-x-already-exists=键为 {0} 的样式簿已经存在。
 a-subset-of-groups-has-been-displayed-for-you-to-review=请审核所显示的用户组。
@@ -1476,6 +1477,7 @@ analytics-upload-product=Analytics Cloud 商务产品上传
 analyzer=分析器
 analyzer-help=用于分析自由格式文本的分析器。默认值为与字段中的第一个字段相关联的分析器。
 and=并且
+and-contains=AND contains (Automatic Copy)
 and-operator=和操作员
 and-or-operator=和/或操作员
 and-then-by=然后通过
@@ -1509,6 +1511,7 @@ any=任何
 any-account=任何帐户
 any-asset=任何Asset
 any-category=任何类别
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=在生产环境中所做的任何更改都将立即生效。继续转到生产环境？
 any-day=任何一天
 any-events-edited-previously-will-not-be-affected-by-this-modification=之前编辑的任何活动不会受到本次修改的影响。
