--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=規則已應用於此欄位。刪除規則，也
 a-rule-is-applied-to-this-field-by-changing-its-type=規則已應用於此欄位。更改其類型，也會影響使用該規則的規則。
 a-single-line=單行
 a-site-pages-variation-with-that-name-already-exists=有那名稱的站台頁面變更已經存在。
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Staged 資產庫無法連接到 Unstaged 站台。
 a-style-book-with-the-key-x-already-exists=鍵值為 {0} 的風格樣式已經存在。
 a-subset-of-groups-has-been-displayed-for-you-to-review=一個群組的子集合已顯示供您審查。
@@ -1476,6 +1477,7 @@ analytics-upload-product=Analytics Cloud Commerce 商品上傳
 analyzer=Analyzer
 analyzer-help=指定分析儀用於輸入文件的欄位。如果留空，則此預設為與字段配置中的第一個條目相關的分析儀。 (Automatic Translation)
 and=並且
+and-contains=AND contains (Automatic Copy)
 and-operator=And 運算子
 and-or-operator=And/Or 運算子
 and-then-by=然後
@@ -1509,6 +1511,7 @@ any=任何
 any-account=任何帳戶
 any-asset=任何資產
 any-category=任何類別
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=正式環境中的任何異動將立即生效。確認要繼續於正式環境中執行?
 any-day=任何天
 any-events-edited-previously-will-not-be-affected-by-this-modification=之前編輯的任何活動不會受到本次修改的影響。
