--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=S'ha aplicat una regla en aquest camp. En suprim
 a-rule-is-applied-to-this-field-by-changing-its-type=S'ha aplicat una regla en aquest camp. Si es canvia aquest tipus, també afectarà la regla que l'utilitza.
 a-single-line=Una sola línia
 a-site-pages-variation-with-that-name-already-exists=Ja existeix una variant de pàgines del lloc web amb aquest nom.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Una biblioteca de continguts amb staging no es pot connectar a un lloc web sense staging.
 a-style-book-with-the-key-x-already-exists=Ja existeix un llibre d'estils amb la clau {0}.
 a-subset-of-groups-has-been-displayed-for-you-to-review=S'ha visualitzat un subconjunt de grups per tal que el reviseu.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Càrrega de productes de comerç d'Analytics Cloud
 analyzer=Analitzador
 analyzer-help=L'analitzador que s'utilitza per analitzar el text de forma lliure. Per defecte, s'utilitza l'analitzador associat al primer camp.
 and=i
+and-contains=AND contains (Automatic Copy)
 and-operator=Operador Y
 and-or-operator=I/O operador
 and-then-by=i després per
@@ -1509,6 +1511,7 @@ any=Qualsevol
 any-account=Qualsevol compte
 any-asset=Qualsevol contingut
 any-category=Qualsevol categoria
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Qualsevol canvi fet a producció es publicarà immediatament. Voleu continuar cap a producció?
 any-day=Qualsevol dia
 any-events-edited-previously-will-not-be-affected-by-this-modification=Qualsevol esdeveniment editat prèviament no es veurà afectat per aquesta modificació.
