--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_CO.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_CO.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=Este campo tiene aplicada una regla. Al eliminar
 a-rule-is-applied-to-this-field-by-changing-its-type=Se aplicó una regla en este campo. Al cambiar el tipo, también se verá afectada la regla que lo usa.
 a-single-line=Una línea
 a-site-pages-variation-with-that-name-already-exists=Una variante de páginas del sitio ya existe con el mismo nombre.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Un repositorio staged no puede conectarse a un sitio unstaged.
 a-style-book-with-the-key-x-already-exists=Ya existe un libro de estilo con la clave {0}.
 a-subset-of-groups-has-been-displayed-for-you-to-review=Un subconjunto de los grupos se muestran a continuación para ser revisados.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Carga de productos de Commerce de Analytics Cloud
 analyzer=Analizador
 analyzer-help=Analizador que se usará para analizar el texto de forma libre. Por defecto, se usa el analizador asociado al primer campo.
 and=y
+and-contains=AND contains (Automatic Copy)
 and-operator=Y operador
 and-or-operator=Y/o operador
 and-then-by=y después por
@@ -1509,6 +1511,7 @@ any=Cualquiera
 any-account=Cualquier cuenta
 any-asset=Cualquier contenido
 any-category=Cualquier categoría
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Los cambios realizados en el entorno de producción se publicarán de inmediato. ¿Quiere ir al entorno de producción?
 any-day=Cualquier día
 any-events-edited-previously-will-not-be-affected-by-this-modification=Esta modificación no afectará a eventos editados previamente.
