--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=Sellele väljale rakendatakse reegel. Selle kust
 a-rule-is-applied-to-this-field-by-changing-its-type=Sellele väljale rakendatakse reegel. Selle tüübi muutmisega mõjutab see ka reeglit, mis seda kasutab. (Automatic Translation)
 a-single-line=A Single Line
 a-site-pages-variation-with-that-name-already-exists=A Site Pages Variation with that name already exists.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Etapiviisiline varateek ei saa olla etapiviisiline saidiga ühendatud. (Automatic Translation)
 a-style-book-with-the-key-x-already-exists=A style book with the key {0} already exists. (Automatic Copy)
 a-subset-of-groups-has-been-displayed-for-you-to-review=Sulle kuvatakse ülevaatamiseks gruppide alamhulk.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Analytics Cloud Commerce'i toodete üleslaadimine (Auto
 analyzer=Analüsaator (Automatic Translation)
 analyzer-help=Määrake sisenddokumendi väljadel kasutatav analüsaator. Kui see jäetakse tühjaks, on see vaikimisi analüsaator, mis on seostatud väljakonfiguratsiooni esimese kandega. (Automatic Translation)
 and=Ja
+and-contains=AND contains (Automatic Copy)
 and-operator=Ja operaator (Automatic Translation)
 and-or-operator=Ja/või operaator (Automatic Translation)
 and-then-by=Ja siis (Automatic Translation)
@@ -1509,6 +1511,7 @@ any=Ükskõik milline
 any-account=Any Account (Automatic Copy)
 any-asset=Suvaline vara (Automatic Translation)
 any-category=Suvaline kategooria (Automatic Translation)
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Any changes made in production will immediately be live. Continue to production? (Automatic Copy)
 any-day=Ükskõik milline päev
 any-events-edited-previously-will-not-be-affected-by-this-modification=See muudatus ei mõjuta varem redigeeritud sündmusi. (Automatic Translation)
