--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=Une règle est appliquée à ce champ. En le sup
 a-rule-is-applied-to-this-field-by-changing-its-type=Une règle est appliquée à ce champ. En changeant son type, cela affectera également la règle qui l'utilise.
 a-single-line=Une seule ligne
 a-site-pages-variation-with-that-name-already-exists=Une variation de pages de site avec ce nom existe déjà.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Une bibliothèque de ressources préparée ne peut pas être connectée à un site qui n'est pas en pré-production.
 a-style-book-with-the-key-x-already-exists=Un livre de style avec la clé {0} existe déjà.
 a-subset-of-groups-has-been-displayed-for-you-to-review=Un sous-ensemble de groupes a été affiché pour que vous le vérifiez.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Téléversement des produits commerciaux de Cloud analy
 analyzer=Analyseur
 analyzer-help=L'analyseur utilisé pour analyser le texte brut. Par défaut pour l'analyseur utilisé pour le premier champ, dans champs.
 and=ET
+and-contains=AND contains (Automatic Copy)
 and-operator=Opérateur ET
 and-or-operator=Opérateurs ET/OU
 and-then-by=Puis par
@@ -1509,6 +1511,7 @@ any=N'importe lequel
 any-account=N'importe quel compte
 any-asset=N'importe quel asset
 any-category=N'importe quelle catégorie
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Toutes les modifications apportées à la production seront immédiatement mises en ligne. Continuer en production ?
 any-day=N'importe quel jour
 any-events-edited-previously-will-not-be-affected-by-this-modification=Tout événement précédemment édité ne sera pas affecté par cette modification.
