--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=A rule is applied to this field. By deleting it,
 a-rule-is-applied-to-this-field-by-changing-its-type=A rule is applied to this field. By changing its type, it will also affect the rule that is using it. (Automatic Copy)
 a-single-line=Unha soa liña
 a-site-pages-variation-with-that-name-already-exists=A Site Pages Variation with that name already exists.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=A staged asset library cannot be connected to an unstaged site. (Automatic Copy)
 a-style-book-with-the-key-x-already-exists=A style book with the key {0} already exists. (Automatic Copy)
 a-subset-of-groups-has-been-displayed-for-you-to-review=Un subconxunto dos grupos móstranse a continuación para ser revisados.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Analytics Cloud Commerce Products Upload (Automatic Cop
 analyzer=Analizador
 analyzer-help=Specify the analyzer to use on the input document's fields. If left blank, this defaults to the analyzer associated with the first entry in the fields configuration. (Automatic Copy)
 and=e
+and-contains=AND contains (Automatic Copy)
 and-operator=Operador E
 and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=E despois por
@@ -1509,6 +1511,7 @@ any=Calquera
 any-account=Any Account (Automatic Copy)
 any-asset=Calquera recurso
 any-category=Calquera categoría
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Any changes made in production will immediately be live. Continue to production? (Automatic Copy)
 any-day=Calquera día
 any-events-edited-previously-will-not-be-affected-by-this-modification=Any events edited previously will not be affected by this modification. (Automatic Copy)
