--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=Er is een regel toegepast voor dit veld. Door he
 a-rule-is-applied-to-this-field-by-changing-its-type=Er is een regel toegepast voor dit veld. Als u het type wijzigt, heeft dit gevolgen voor de regel die er gebruik van maakt.
 a-single-line=Een enkele lijn
 a-site-pages-variation-with-that-name-already-exists=Er bestaat al een sitepaginavariant met deze naam.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Een gefaseerde assetbibliotheek mag niet verbonden zijn aan een niet-gefaseerde site.
 a-style-book-with-the-key-x-already-exists=Er bestaat al een stijlboek met de sleutel {0}.
 a-subset-of-groups-has-been-displayed-for-you-to-review=Te beoordelen groepen.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Producten handel uploaden van Analytics Cloud
 analyzer=Analysator
 analyzer-help=De analysator die wordt gebruikt om vrije tekst te analyseren. Standaard is dit de analysator die gekoppeld is aan het eerste veld in velden.
 and=En
+and-contains=AND contains (Automatic Copy)
 and-operator=En-operator
 and-or-operator=En/Of Operator
 and-then-by=en dan op
@@ -1509,6 +1511,7 @@ any=Elk
 any-account=Om het even welk account
 any-asset=Ieder content item
 any-category=Iedere categorie
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Wijzigingen in de productie gaan onmiddellijk live. Doorgaan naar productie?
 any-day=Elke dag
 any-events-edited-previously-will-not-be-affected-by-this-modification=Eventuele gebeurtenissen die eerder werden gewijzigd, zullen geen invloed ondervinden van deze wijziging.
