--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=Uma regra foi aplicada a este campo. Ao exclui-l
 a-rule-is-applied-to-this-field-by-changing-its-type=Uma regra foi aplicada a este campo. Ao alterar seu tipo, isso também afetará a regra que o está utilizando.
 a-single-line=Uma única linha
 a-site-pages-variation-with-that-name-already-exists=Já existe uma Variação de Páginas de Site com esse nome.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Uma biblioteca de ativos preparada não pode ser conectada a um site pré-configurado.
 a-style-book-with-the-key-x-already-exists=Um livro de estilo com a chave {0} já existente.
 a-subset-of-groups-has-been-displayed-for-you-to-review=Um subconjunto de grupos foi mostrado para você revisar.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Upload de produtos do comércio Analytics Cloud
 analyzer=Analisador
 analyzer-help=O analisador que é usado para analisar o texto de forma livre. Padrões para o analisador associado com o primeiro campo nos campos.
 and=e
+and-contains=AND contains (Automatic Copy)
 and-operator=Operador E
 and-or-operator=Operador E/Ou
 and-then-by=E então por
@@ -1509,6 +1511,7 @@ any=Qualquer
 any-account=Qualquer conta
 any-asset=Qualquer ativo
 any-category=Qualquer Categoria
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Qualquer alteração realizada na produção será imediatamente ativada. Continuar com a produção?
 any-day=Qualquer dia
 any-events-edited-previously-will-not-be-affected-by-this-modification=Qualquer evento editado anteriormente não será afetado pela modificação.
