--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=Uma regra é aplicada a este campo. Ao excluí-l
 a-rule-is-applied-to-this-field-by-changing-its-type=Uma regra é aplicada a este campo. Ao mudar seu tipo, também afetará a regra que a está usando. (Automatic Translation)
 a-single-line=A Single Line
 a-site-pages-variation-with-that-name-already-exists=Já existe uma variante de página de Site com esse nome.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Uma biblioteca de ativos encenada não pode ser conectada a um site não encenado. (Automatic Translation)
 a-style-book-with-the-key-x-already-exists=A style book with the key {0} already exists. (Automatic Copy)
 a-subset-of-groups-has-been-displayed-for-you-to-review=Foi indicado um subconjunto de grupos para revisão.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Upload de produtos de comércio em nuvem de análise (A
 analyzer=analisador (Automatic Translation)
 analyzer-help=Especifique o analisador para usar nos campos do documento de entrada. Se deixado em branco, isso padrão para o analisador associado à primeira entrada na configuração de campos. (Automatic Translation)
 and=E
+and-contains=AND contains (Automatic Copy)
 and-operator=e Operador
 and-or-operator=Operador E/Ou
 and-then-by=E então por
@@ -1509,6 +1511,7 @@ any=Qualquer
 any-account=Any Account (Automatic Copy)
 any-asset=Qualquer Conteúdo
 any-category=Qualquer Categoria
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Any changes made in production will immediately be live. Continue to production? (Automatic Copy)
 any-day=Qualquer Dia
 any-events-edited-previously-will-not-be-affected-by-this-modification=Quaisquer eventos editados anteriormente não serão afetados por esta modificação. (Automatic Translation)
