--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=Za to polje se uporabi pravilo. Z brisanjem bo k
 a-rule-is-applied-to-this-field-by-changing-its-type=Za to polje se uporabi pravilo. S spremembo svoje vrste bo vplivala tudi na pravilo, ki ga uporablja. (Automatic Translation)
 a-single-line=A Single Line
 a-site-pages-variation-with-that-name-already-exists=A Site Pages Variation with that name already exists.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Knjižnice uprizoritvenih sredstev ni mogoče povezati z nestagirana mesta. (Automatic Translation)
 a-style-book-with-the-key-x-already-exists=A style book with the key {0} already exists. (Automatic Copy)
 a-subset-of-groups-has-been-displayed-for-you-to-review=Prikazan je nabor skupin za vaš pregled.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Nalaganje izdelkov storitve Analytics Cloud Commerce (A
 analyzer=Analizator (Automatic Translation)
 analyzer-help=Določite analizator, ki ga želite uporabiti v poljih vnosnega dokumenta. Če ostane prazno, se to privzame analizatorju, povezanem s prvim vnosom v konfiguraciji polj. (Automatic Translation)
 and=In
+and-contains=AND contains (Automatic Copy)
 and-operator=In operater (Automatic Translation)
 and-or-operator=In/ali operater (Automatic Translation)
 and-then-by=In potem z (Automatic Translation)
@@ -1509,6 +1511,7 @@ any=Kateri koli
 any-account=Any Account (Automatic Copy)
 any-asset=Katero koli sredstvo (Automatic Translation)
 any-category=Katero koli kategorijo (Automatic Translation)
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Any changes made in production will immediately be live. Continue to production? (Automatic Copy)
 any-day=Kateri koli dan
 any-events-edited-previously-will-not-be-affected-by-this-modification=Ta sprememba ne bo vplivala na vse prej urejene dogodke. (Automatic Translation)
