--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=En regel används i det här fältet. Om du tar 
 a-rule-is-applied-to-this-field-by-changing-its-type=En regel används i det här fältet. Om du ändrar typen påverkas regeln som använder den.
 a-single-line=Enkel rad
 a-site-pages-variation-with-that-name-already-exists=En sidsamlingsvariant med det namnet existerar redan.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=Ett mellanlagrat tillgångsbibliotek kan inte kopplas till en mellanlagrad plats.
 a-style-book-with-the-key-x-already-exists=Det finns redan en stilbok med nyckeln {0}.
 a-subset-of-groups-has-been-displayed-for-you-to-review=En delmängd grupper visas för ditt godkännande
@@ -1476,6 +1477,7 @@ analytics-upload-product=Uppladdning av handelsprodukt i Analytics Cloud
 analyzer=Analysverktyg
 analyzer-help=Analysverktyget som används för att analysera friformstext. Standard är analysverktyg som är associerat med det första fältet i fält.
 and=och
+and-contains=AND contains (Automatic Copy)
 and-operator=Och operator
 and-or-operator=Och/eller operator
 and-then-by=och sedan på
@@ -1509,6 +1511,7 @@ any=Valfri
 any-account=Valfritt konto
 any-asset=Valfri tillgång
 any-category=Alla kategorier
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Ändringar som görs i produktion publiceras direkt. Fortsätt till produktion?
 any-day=Valfri dag
 any-events-edited-previously-will-not-be-affected-by-this-modification=Händelser som tidigare redigerats påverkas inte av den här ändringen.
