--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=A rule is applied to this field. By deleting it,
 a-rule-is-applied-to-this-field-by-changing-its-type=A rule is applied to this field. By changing its type, it will also affect the rule that is using it. (Automatic Copy)
 a-single-line=ஒரு வரி
 a-site-pages-variation-with-that-name-already-exists=அந்த பெயருடனான ஒரு Site page variation ஏற்கனவே உள்ளது.
+a-specific-category=A Specific Category (Automatic Copy)
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=A staged asset library cannot be connected to an unstaged site. (Automatic Copy)
 a-style-book-with-the-key-x-already-exists=A style book with the key {0} already exists. (Automatic Copy)
 a-subset-of-groups-has-been-displayed-for-you-to-review=நீங்கள் மதிப்பாய்வு செய்ய குழுக்களின் துணைக்குழு காட்டப்பட்டுள்ளது.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Analytics Cloud Commerce Products Upload (Automatic Cop
 analyzer=Analyzer (Automatic Copy)
 analyzer-help=Specify the analyzer to use on the input document's fields. If left blank, this defaults to the analyzer associated with the first entry in the fields configuration. (Automatic Copy)
 and=மற்றும்
+and-contains=AND contains (Automatic Copy)
 and-operator=And ஆபரேட்டர்
 and-or-operator=And/Or ஆபரேட்டர்
 and-then-by=And Then By (Automatic Copy)
@@ -1509,6 +1511,7 @@ any=ஏதாவது
 any-account=Any Account (Automatic Copy)
 any-asset=எந்த அசெட்டும்
 any-category=எந்த வகையும்
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary (Automatic Copy)
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Any changes made in production will immediately be live. Continue to production? (Automatic Copy)
 any-day=எந்த நாளும்
 any-events-edited-previously-will-not-be-affected-by-this-modification=முன்பு திருத்தப்பட்ட எந்த நிகழ்வும் இந்த மாற்றத்தால் பாதிக்கப்படாது.
